Fix popup menu overflow on mobile

--- a/app/assets/stylesheets/popup.css
+++ b/app/assets/stylesheets/popup.css
@@ -58,4 +58,5 @@
   min-width: 220px;
   top: calc(100% + 4px);
   right: 0;
+  transform: translateX(0);
 }
